--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-bootstrap-icons": "^1.11.3",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.1",
