--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "swiper": "^11.0.7",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
