--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,21 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.1.9",
-    "@mui/material": "^5.15.13",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/lab": "^5.0.0-alpha.169",
+    "@mui/material": "^5.15.14",
     "axios": "^1.6.7",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.18.0",
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
